src/objects/c2g__StatisticalBasisLineItemVersion__c.object
<CustomObject>
    <description>Stores versions of statistical basis line item records.</description>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IsObsolete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Obsolete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ParentVersion__c</fullName>
        <label>ParentVersion</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StatisticalBasis__c</fullName>
        <label>Statistical Basis</label>
        <referenceTo>c2g__StatisticalBasis__c</referenceTo>
        <relationshipName>StatisticalBasisLineItemVersions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Statistical Basis Line Item Version</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>c2g__Company__c</columns>
        <columns>c2g__Value__c</columns>
        <columns>c2g__Version__c</columns>
        <columns>c2g__Dimension1__c</columns>
        <columns>c2g__Dimension2__c</columns>
        <columns>c2g__Dimension3__c</columns>
        <columns>c2g__Dimension4__c</columns>
        <columns>c2g__GeneralLedgerAccount__c</columns>
        <columns>c2g__IsObsolete__c</columns>
        <columns>c2g__ParentVersion__c</columns>
        <columns>c2g__StatisticalBasis__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Statistical Basis Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Statistical Basis Line Items Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>